--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,9 @@
       margin: 100;
       font-family: 'Noto Sans';
     }
+    footer {
+      background-color: #2f3640;
+    }
     .min-h-screen {
       min-height: 100vh;
     }
@@ -118,6 +121,17 @@
     </div>
 
   </div>
+
+  <footer class="w-full text-white py-8">
+    <div class="container mx-auto px-4 max-w-4xl">
+      <p class="text-sm font-bold mb-4">Wheel of life / 人生の輪</p>
+      <p class="mb-2 text-sm">注意・免責事項</p>
+      <p class="mb-4 text-sm">匿名化された閲覧者の属性分析を通じて本サービスの品質を向上させるために、Google LLCが提供するサービス「Google Analytics」を介してGoogle LLCに対して閲覧者が保持する情報（IPアドレス・閲覧URL・閲覧遷移元URL・閲覧日時・デバイス情報）を送信しています。また本サービスの情報によって閲覧者に生じたいかなる損害も、本サービスの開発者は一切の責任を負いません。</p>
+      <p class="mb-2 text-sm">お問い合わせ</p>
+      <p class="mb-4 text-sm">wheel.of.life.me@gmail.com</p>
+      <p class="text-sm">© 2024 Kensuke Sasaki</p>
+    </div>
+  </footer>
 
   <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
   <script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
