--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,7 @@
   <title>Wheel of Life</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="favicon.ico">
   <style>
     html, body {
       height: 100%;
