--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
   <title>Wheel of Life</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="https://raw.githubusercontent.com/kensuke-b-sasaki/wheel-of-life/main/views/favicon.ico">
   <style>
     html, body {
       height: 100%;
