--- a/views/index.html
+++ b/views/index.html
@@ -65,7 +65,7 @@
 </head>
 <body class="bg-white flex flex-col items-center justify-start min-h-screen">
 
-  <header class="header w-full text-white py-6 pb-3">
+  <header class="header w-full text-white py-6 pb-3 pt-8 px-3">
     <div class="container mx-auto px-4 max-w-4xl">
       <h1 class="text-2xl font-bold text-gray-700">Wheel of Life / 人生の輪</h1>
     </div>
