add description & change slider min value

--- a/views/index.html
+++ b/views/index.html
@@ -137,69 +137,70 @@
           <label for="slider-career" class="block text-gray-700">仕事・キャリア</label>
           <span id="value-career" class="font-bold text-gray-700">5</span>
         </div>
-        <input type="range" id="slider-career" min="1" max="10" value="5" class="slider">
+        <input type="range" id="slider-career" min="0" max="10" value="5" class="slider">
       </div>
       <div class="slider-container">
         <div class="flex justify-between items-center">
           <label for="slider-money" class="block text-gray-700">お金・経済</label>
           <span id="value-money" class="font-bold text-gray-700">5</span>
         </div>
-        <input type="range" id="slider-money" min="1" max="10" value="5" class="slider">
+        <input type="range" id="slider-money" min="0" max="10" value="5" class="slider">
       </div>
       <div class="slider-container">
         <div class="flex justify-between items-center">
           <label for="slider-health" class="block text-gray-700">健康</label>
           <span id="value-health" class="font-bold text-gray-700">5</span>
         </div>
-        <input type="range" id="slider-health" min="1" max="10" value="5" class="slider">
+        <input type="range" id="slider-health" min="0" max="10" value="5" class="slider">
       </div>
       <div class="slider-container">
         <div class="flex justify-between items-center">
           <label for="slider-family" class="block text-gray-700">家族・パートナー</label>
           <span id="value-family" class="font-bold text-gray-700">5</span>
         </div>
-        <input type="range" id="slider-family" min="1" max="10" value="5" class="slider">
+        <input type="range" id="slider-family" min="0" max="10" value="5" class="slider">
       </div>
       <div class="slider-container">
         <div class="flex justify-between items-center">
           <label for="slider-relationships" class="block text-gray-700">人間関係</label>
           <span id="value-relationships" class="font-bold text-gray-700">5</span>
         </div>
-        <input type="range" id="slider-relationships" min="1" max="10" value="5" class="slider">
+        <input type="range" id="slider-relationships" min="0" max="10" value="5" class="slider">
       </div>
       <div class="slider-container">
         <div class="flex justify-between items-center">
           <label for="slider-learning" class="block text-gray-700">学び・自己啓発</label>
           <span id="value-learning" class="font-bold text-gray-700">5</span>
         </div>
-        <input type="range" id="slider-learning" min="1" max="10" value="5" class="slider">
+        <input type="range" id="slider-learning" min="0" max="10" value="5" class="slider">
       </div>
       <div class="slider-container">
         <div class="flex justify-between items-center">
           <label for="slider-leisure" class="block text-gray-700">遊び・余暇</label>
           <span id="value-leisure" class="font-bold text-gray-700">5</span>
         </div>
-        <input type="range" id="slider-leisure" min="1" max="10" value="5" class="slider">
+        <input type="range" id="slider-leisure" min="0" max="10" value="5" class="slider">
       </div>
       <div class="slider-container">
         <div class="flex justify-between items-center">
           <label for="slider-physicalenvironment" class="block text-gray-700">物理的環境</label>
           <span id="value-physicalenvironment" class="font-bold text-gray-700">5</span>
         </div>
-        <input type="range" id="slider-physicalenvironment" min="1" max="10" value="5" class="slider">
+        <input type="range" id="slider-physicalenvironment" min="0" max="10" value="5" class="slider">
       </div>
     </div>
 
   </div>
 
-  <footer class="w-full text-gray-700 py-8">
+  <footer class="w-full text-gray-500 py-8">
     <div class="container mx-auto px-4 max-w-4xl">
-      <p class="text-sm font-bold mb-4">Wheel of life / 人生の輪</p>
-      <p class="mb-2 text-sm">注意・免責事項</p>
-      <p class="mb-4 text-sm">匿名化された閲覧者の属性分析を通じて本サービスの品質を向上させるために、Google LLCが提供するサービス「Google Analytics」を介してGoogle LLCに対して閲覧者が保持する情報（IPアドレス・閲覧URL・閲覧遷移元URL・閲覧日時・デバイス情報）を送信しています。また本サービスの情報によって閲覧者に生じたいかなる損害も、本サービスの開発者は一切の責任を負いません。</p>
-      <p class="mb-2 text-sm">お問い合わせ</p>
-      <p class="mb-4 text-sm">wheel.of.life.me@gmail.com</p>
-      <p class="text-sm">© 2024 Kensuke Sasaki</p>
+      <p class="mb-4 font-bold text-sm">Wheel of life / 人生の輪 とは</p>
+      <p class="mb-2 text-xs">人生の輪で、自分の状態に自覚的に生活する助けになればと思っております。<br>お一人での振り返りはもちろん、あなたを理解してくれる第三者と一緒に人生の輪に向き合うことで、良い関係性を築くきっかけになれば幸いです。</p>
+      <p class="mb-4 mt-4 font-bold text-sm">注意・免責事項</p>
+      <p class="mb-4 text-xs">匿名化された閲覧者の属性分析を通じて本サービスの品質を向上させるために、Google LLCが提供するサービス「Google Analytics」を介してGoogle LLCに対して閲覧者が保持する情報（IPアドレス・閲覧URL・閲覧遷移元URL・閲覧日時・デバイス情報）を送信しています。また本サービスの情報によって閲覧者に生じたいかなる損害も、本サービスの開発者は一切の責任を負いません。</p>
+      <p class="mb-4 font-bold text-sm">お問い合わせ</p>
+      <p class="mb-4 text-xs">wheel.of.life.me@gmail.com</p>
+      <p class="text-xs text-center">© 2024 Kensuke Sasaki</p>
     </div>
   </footer>
 
@@ -436,7 +437,7 @@
         menu: am5plugins_exporting.ExportingMenu.new(root, {}),
         filePrefix: `life_wheel_${dateString.replace(/-/g, '')}`,
         pngOptions: {
-          quality: 1.2
+          quality: 1
         },
         jpgOptions: {
           disabled: true
