--- a/views/index.html
+++ b/views/index.html
@@ -237,8 +237,7 @@
   <footer class="w-full text-gray-500 py-8">
     <div class="container mx-auto px-4 max-w-4xl">
       <p class="mb-4 font-bold text-sm">Wheel of life / 人生の輪 とは</p>
-      <p class="mb-2 text-xs">人生の輪とは、Success Motivation® Institute, Inc. Paul J. Meyerにより提唱された自己分析ツールです。</p>
-      <p class="mb-2 text-xs">8つの軸に沿ってご自身の現在の状況を数値化し、今、この瞬間における人生のバランスを把握することにお役立てください。</p>
+      <p class="mb-2 text-xs">人生の輪とは、Success Motivation® Institute, Inc. Paul J. Meyerにより提唱された自己分析ツールです。<br>8つの軸に沿ってご自身の現在の状況を数値化し、今、この瞬間における人生のバランスを把握することにお役立てください。</p>
       <p class="mb-4 mt-4 font-bold text-sm">注意・免責事項</p>
       <p class="mb-4 text-xs">匿名化された閲覧者の属性分析を通じて本サービスの品質を向上させるために、Google LLCが提供するサービス「Google Analytics」を介してGoogle LLCに対して閲覧者が保持する情報（IPアドレス・閲覧URL・閲覧遷移元URL・閲覧日時・デバイス情報）を送信しています。また本サービスの情報によって閲覧者に生じたいかなる損害も、本サービスの開発者は一切の責任を負いません。</p>
       <p class="mb-4 font-bold text-sm">お問い合わせ</p>
